Set img height to auto to fix stretched images

--- a/_sass/base/_media.scss
+++ b/_sass/base/_media.scss
@@ -13,4 +13,5 @@ img,
 picture {
   margin: 0;
   max-width: 100%;
+  height: auto;
 }
